2008-05-29  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerView.cs:
	Small rounding fix

	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerWindow.cs:
	Ported from glade, some fixes

	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs: Only allow one
	instance of the equalizer to be shown; present the open version if exists

	* src/Core/Banshee.ThickClient/Resources/banshee-dialogs.glade: Removed
	the equalizer

	* src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs
	* libbanshee/banshee-player-equalizer.c: White space cleanup

	* libbanshee/banshee-player-pipeline.c: White space cleanup and removed
	a redundant element link

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Clients/Halie/Halie/Client.cs: Don't turn strings that start with
	*:// into local file paths.

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/StationSource.cs: Add
	method for creating a station given a lastfm:// url.

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs:
	Listen for command line file arguments starting in lastfm:// and try to
	create new stations for them.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Handle feed:// command line files, subscribing to them.

	* src/Core/Banshee.Core/Banshee.Base/CoverArtSpec.cs: Add TODO

2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* libbanshee/banshee-player-equalizer.c: (bp_equalizer_set_gain),
	(bp_equalizer_get_bandrange), (bp_equalizer_get_nbands),
	(bp_equalizer_get_frequencies):
	* src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs:
	Get the number of frequency bands from the element and always take
	the complete gain range. Guard against some possible crashes and
	don't return an array that is allocated on the stack to the caller
	who provided us with a correctly allocated array already.
	
	* libbanshee/banshee-player-pipeline.c: (_bp_pipeline_construct):